--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+        <div id="result-container"></div>
         <script type="text/javascript" src="js/scripts.js"></script>
     </body>
 </html>
